--- a/main.html
+++ b/main.html
@@ -20,15 +20,15 @@
 		<tbody>
 			<tr>
 				<td>647864</td></td>
-				<td>Sayantan</td>
+				<td>Diksha</td>
 			</tr>
 			<tr>
 				<td>647863</td></td>
-				<td>Sayan</td>
+				<td>Divya</td>
 			</tr>
 			<tr>
 				<td>6478363</td></td>
-				<td>Sayantani</td>
+				<td>Divyanshi</td>
 			</tr>
 		</tbody>
 	</table>
